--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,7 +7,8 @@ test_task:
     - mkdir /src
     - cp app/requirements.txt /
     - cp -r app/src /
-    - cp -r config /
+    - mkdir /config
+    - cp config/app.conf.template /config/app.conf
     - pip3 install --requirement /requirements.txt
   test_script:
     - python3 /src/main.py
