--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -11,7 +11,7 @@ test_task:
     - cp config/app.conf.template /config/app.conf
     - pip3 install --requirement /requirements.txt
   test_script:
-    - python3 /src/main.py
+    - python3 /src/test.py
   binaries_artifacts:
     path: build/*
   always:
